--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  text-align: center;
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: normal;
+	text-align: center;
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: normal;
 }
 /* 
 .App-logo {
@@ -19,179 +19,157 @@ reformat css*/
 /* Bootstrap 4 text input with search icon */
 
 .has-search .form-control {
-  padding-left: 2.375rem;
+	padding-left: 2.375rem;
 }
 
 .has-search .form-control-feedback {
-  position: absolute;
-  z-index: 2;
-  display: block;
-  width: 2.375rem;
-  height: 2.375rem;
-  line-height: 2.375rem;
-  text-align: center;
-  pointer-events: none;
-  color: #aaa;
+	position: absolute;
+	z-index: 2;
+	display: block;
+	width: 2.375rem;
+	height: 2.375rem;
+	line-height: 2.375rem;
+	text-align: center;
+	pointer-events: none;
+	color: #aaa;
 }
-
-
-
 
 /* reformat */
 .input-style {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
-.input-style input[type="text"]{
-  
-  
-  
-  
-  
-  
-  /* Secondary / Faded */
+.input-style input[type='text'] {
+	/* Secondary / Faded */
 
-background: #FDF9ED;
-/* Secondary / Subtle */
+	background: #fdf9ed;
+	/* Secondary / Subtle */
 
-border: 0.5px solid #F7E8B5;
-box-sizing: border-box;
-padding-left: 50px;
-border-radius: 0px 11px 11px 11px;
-height: 70px;
+	border: 0.5px solid #f7e8b5;
+	box-sizing: border-box;
+	padding-left: 50px;
+	border-radius: 0px 11px 11px 11px;
+	height: 70px;
+}
+.input-pad {
+	padding-top: 30px;
+	padding-left: 80px;
+	padding-right: 80px;
+}
+.input-type1 {
+}
+.user-icon1 {
+	padding-top: 15px;
+	padding-left: 20px;
+}
+.text-personalinfo {
+	padding: 0%;
+	margin: 0%;
+	font-size: 20px;
+}
+.input-text-label {
+	padding: 0%;
+	margin: 0%;
 
+	font-size: 16px;
+	text-align: left;
 }
-.input-pad{
-  padding-top: 30px;
-  padding-left: 80px;
-  padding-right: 80px;
+.text-personal-Acc-page {
+	padding: 0%;
+	margin: 0%;
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 21px;
+	line-height: 100%;
+	color: #273b4a;
 }
-.input-type1{
-  
+.text-personal-Acc {
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 21px;
+	line-height: 100%;
+	color: #273b4a;
 }
-.user-icon1{
-  padding-top: 15px;
-  padding-left: 20px;
+.text-create-an-account {
+	font-weight: bold;
 }
-.text-personalinfo{
-  padding: 0%;
-  margin: 0%;
-  font-size: 20px;
- 
-}
-.input-text-label{
-  padding: 0%;
-  margin: 0%;
-
-  font-size: 16px;
-  text-align: left;
-}
-.text-personal-Acc-page{
-padding: 0%;
-margin: 0%;
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 100%;
-  color: #273B4A;
-}
-.text-personal-Acc{
-
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 100%;
-  color: #273B4A;
-}
-.text-create-an-account{
-  font-weight: bold;
-}
-.text-business-Acc{
-
-  font-family: Ubuntu;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 21px;
-  line-height: 100%;
-  color: #273B4A;
+.text-business-Acc {
+	font-family: Ubuntu;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 21px;
+	line-height: 100%;
+	color: #273b4a;
 }
 .App-header {
-  background-color: #ffffff;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  
+	background-color: #ffffff;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
 }
 
 .App-link {
 }
-.sign-up-box1{
-  width: 270px;
-  position: absolute;
-  padding-left: 30px;
-margin-left: 29px;
-height: 225px;
-border: 1px solid #D9D9D9;
-box-sizing: border-box;
-border-radius: 0px 11px 11px 11px;
+.sign-up-box1 {
+	width: 270px;
+	position: absolute;
+	padding-left: 30px;
+	margin-left: 29px;
+	height: 225px;
+	border: 1px solid #d9d9d9;
+	box-sizing: border-box;
+	border-radius: 0px 11px 11px 11px;
 
-text-align: left;
+	text-align: left;
 }
 
-.sign-up-box2{
-  width: 270px;
-  padding-left: 30px;
-  text-align: left;
-  position: absolute;
-margin-left: 310px;
-height: 225px;
-border: 1px solid #D9D9D9;
-box-sizing: border-box;
-border-radius: 0px 11px 11px 11px;
-
+.sign-up-box2 {
+	width: 270px;
+	padding-left: 30px;
+	text-align: left;
+	position: absolute;
+	margin-left: 310px;
+	height: 225px;
+	border: 1px solid #d9d9d9;
+	box-sizing: border-box;
+	border-radius: 0px 11px 11px 11px;
 }
-.icon-union{
-  margin-top: 34px;
-  Width : 64.19px;
-  Height :  79px;
-
-
+.icon-union {
+	margin-top: 34px;
+	width: 64.19px;
+	height: 79px;
 }
 
-.icon-group{
-  margin-top: 34px;
-  Width : 79px;
-  Height :  79px;
-
-  
+.icon-group {
+	margin-top: 34px;
+	width: 79px;
+	height: 79px;
 }
 
-.Logo-mark{
-  width: 86px;
-height: 20px;
-left: 364px;
-margin-top: 49px;
+.Logo-mark {
+	width: 86px;
+	height: 20px;
+	left: 364px;
+	margin-top: 49px;
 }
-.btnstyle{
-  background: #D6AA1B;
-border-radius: 0px 11px 11px 11px;
-color:white;
-width: 450px;
-height: 70px;
+.btnstyle {
+	background: #d6aa1b;
+	border-radius: 0px 11px 11px 11px;
+	color: white;
+	width: 450px;
+	height: 70px;
 }
 .White-Box {
-  width: 613px;
-height: 612px;
-  background-color: #ffffff;
-  border: 0.5px solid #D9D9D9;
-box-sizing: border-box;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 0px 21px 21px 21px;
+	width: 613px;
+	height: 612px;
+	background-color: #ffffff;
+	border: 0.5px solid #d9d9d9;
+	box-sizing: border-box;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 0px 21px 21px 21px;
 }
-
-
