--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,8 @@ reformat css*/
 	padding-left: 80px;
 	padding-right: 80px;
 }
-.input-type1 {
-}
+/* .input-type1 {
+} */
 .user-icon1 {
 	padding-top: 15px;
 	padding-left: 20px;
