--- a/src/App.css
+++ b/src/App.css
@@ -113,8 +113,8 @@ reformat css*/
 	font-size: calc(10px + 2vmin);
 }
 
-.App-link {
-}
+/* .App-link {
+} */
 .sign-up-box1 {
 	width: 270px;
 	position: absolute;
