--- a/src/layouts/Dashboard/Dash.css
+++ b/src/layouts/Dashboard/Dash.css
@@ -6,6 +6,24 @@
   width: 46%;
   margin-left: 3rem;
 }
+.left-step-dash{
+  width: 40%;
+  margin-left: 4rem;
+  margin-top: 4rem;
+  background: #ffffff;
+
+  border: 0.5px solid #d9d9d9;
+  box-sizing: border-box;
+  border-radius: 0px 11px 11px 11px;
+}
+.left-deal-dash {
+  width: 46%;
+  margin-left: 1.6rem;
+}
+.right-deal-dash {
+  width: 46%;
+  margin-right: 1.4rem;
+}
 .right-dash {
   width: 48%;
   margin-right: 3rem;
@@ -24,6 +42,56 @@
   margin: 0 auto;
   width: 100%;
   margin-top: 4.5rem;
+}
+.tab-click {
+  display: flex;
+  margin-top: 4.5rem;
+  width: 100%;
+  margin-left: 4.5rem;
+}
+.tab-inners{
+  display: flex !important;
+  /* width: 100% !important; */
+  justify-content: space-between !important;
+  background-color:red
+}
+.tab-inners-left {
+  width: 50% !important;
+  padding-top: 2.7rem !important;
+}
+.tab-inners-right {
+  padding-top:3rem;
+  /* width: 50%; */
+}
+.tab-profile {
+  padding: 2.5rem 5.3rem !important;
+}
+.tab-password {
+  width: 100% !important;
+  display: flex !important;
+  padding-top: 3rem;
+  padding-left: 4rem;
+  flex-direction: column !important;
+  justify-content: left;
+
+}
+.search-div {
+  display: flex;
+  justify-content: center;
+  /* margin-top: 5rem; */
+  width: 88%;
+  margin: 7rem auto 1rem auto;
+}
+.select-div {
+  width: 88%;
+  margin: 1rem auto 3rem auto;
+  display: flex;
+  justify-content: center;
+}
+.btn-div {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 6rem;
 }
 .text-act {
   padding-top: 1.2rem;
@@ -76,7 +144,15 @@
 .trans-tab {
   padding: 0 !important;
 }
-
+.deals-left {
+  background: #ffffff;
+  border: 0.5px solid #d9d9d9;
+  box-sizing: border-box;
+  border-radius: 0px 11px 11px 11px;
+}
+.tab-inner-div {
+  display: flex;
+}
 @media screen and (max-width: 768px) {
   .dash-cover {
     flex-direction: column;
@@ -85,6 +161,14 @@
   .left-dash {
     margin-left: 0.8rem;
     width: 100%;
+  }
+  .left-step-dash {
+    margin: 0 auto;
+    width: 98%;
+  }
+  .left-deal-dash {
+    margin: 0 auto;
+    width: 97%;
   }
   .tab-div {
     justify-content: center;
@@ -103,6 +187,10 @@
     text-align: center;
   }
   .right-dash {
+    width: 92%;
+    margin: 0 auto;
+  }
+  .right-deal-dash {
     width: 92%;
     margin: 0 auto;
   }
