--- a/src/layouts/Dashboard/Dash.css
+++ b/src/layouts/Dashboard/Dash.css
@@ -2,11 +2,21 @@
   display: flex;
   justify-content: space-between;
 }
+.url-dash{
+  margin-left: 5rem;
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column
+}
+.add-url{
+  padding-bottom: 10rem;
+}
 .left-dash {
   width: 46%;
   margin-left: 3rem;
+
 }
-.left-step-dash{
+.left-step-dash {
   width: 40%;
   margin-left: 4rem;
   margin-top: 4rem;
@@ -15,6 +25,28 @@
   border: 0.5px solid #d9d9d9;
   box-sizing: border-box;
   border-radius: 0px 11px 11px 11px;
+}
+.copy-div {
+  display: flex;
+  flex-direction: column;
+  background: #ffffff;
+  border: 1px solid #d9d9d9;
+  box-sizing: border-box;
+  border-radius: 0px 21px 21px 21px;
+  width: 80%;
+  padding: 1.4rem 3rem;
+}
+.copy-copy {
+  font-size: 14px;
+  display: flex;
+  color: #d6aa1b;
+  justify-content: space-between;
+  align-items: center;
+  width: 50px;
+}
+.copy-top {
+  display: flex;
+  justify-content: space-between;
 }
 .left-deal-dash {
   width: 46%;
@@ -27,6 +59,34 @@
 .right-dash {
   width: 48%;
   margin-right: 3rem;
+}
+.right-chart-dash {
+  width: 48%;
+  margin-right: 3rem;
+}
+.store-form{
+  display: flex;
+  /* background-color: blue !important; */
+  /* flex-direction: column; */
+}
+.url-form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  /* justify-content:left; */
+}
+.chart-div {
+  margin-top:16rem;
+  background: #FFFFFF;
+/* Neutral / Gray 30 */
+padding: 2rem;
+border: 1px solid #D9D9D9;
+box-sizing: border-box;
+border-radius: 0px 11px 11px 11px;
+  /* width: 100%;
+  height:80%;
+  margin: 0 auto; */
+  /* justify-content: center; */
 }
 .right-dash-inner {
   background: #ffffff;
@@ -49,18 +109,18 @@
   width: 100%;
   margin-left: 4.5rem;
 }
-.tab-inners{
+.tab-inners {
   display: flex !important;
   /* width: 100% !important; */
   justify-content: space-between !important;
-  background-color:red
+  background-color: red;
 }
 .tab-inners-left {
   width: 50% !important;
   padding-top: 2.7rem !important;
 }
 .tab-inners-right {
-  padding-top:3rem;
+  padding-top: 3rem;
   /* width: 50%; */
 }
 .tab-profile {
@@ -73,7 +133,6 @@
   padding-left: 4rem;
   flex-direction: column !important;
   justify-content: left;
-
 }
 .search-div {
   display: flex;
@@ -190,8 +249,27 @@
     width: 92%;
     margin: 0 auto;
   }
+  .right-chart-dash {
+    width: 86%;
+    margin: 0 auto;
+    margin-bottom: 6rem;
+  
+  }
+  .chart-div{
+    margin-top: 0;
+  }
   .right-deal-dash {
     width: 92%;
     margin: 0 auto;
+  }
+  .copy-div {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .store-form{
+    flex-direction: column;
+  }
+  .url-form{
+    flex-direction: column;
   }
 }
