--- a/src/layouts/Dashboard/Dash.css
+++ b/src/layouts/Dashboard/Dash.css
@@ -21,7 +21,7 @@
   margin-left: 4rem;
   margin-top: 4rem;
   background: #ffffff;
-
+height:100%;
   border: 0.5px solid #d9d9d9;
   box-sizing: border-box;
   border-radius: 0px 11px 11px 11px;
@@ -49,8 +49,20 @@
   justify-content: space-between;
 }
 .left-deal-dash {
+  width: 44%;
+  margin-left: 1.6rem;
+}
+.left-trans-dash {
   width: 46%;
   margin-left: 1.6rem;
+  background: #ffffff;
+  border: 0.5px solid #D9D9D9;
+box-sizing: border-box;
+border-radius: 0px 11px 11px 11px;
+}
+inner-trans-dash{
+  width: 90%;
+  margin: 0 auto;
 }
 .right-deal-dash {
   width: 46%;
@@ -147,6 +159,10 @@ border-radius: 0px 11px 11px 11px;
   display: flex;
   justify-content: center;
 }
+.trans-div{
+  width:90%;
+  margin: 0 auto;
+}
 .btn-div {
   display: flex;
   justify-content: center;
@@ -223,7 +239,8 @@ border-radius: 0px 11px 11px 11px;
   }
   .left-step-dash {
     margin: 0 auto;
-    width: 98%;
+    width: 95%;
+    margin-top: 1.3rem;
   }
   .left-deal-dash {
     margin: 0 auto;
