--- a/src/component/sidebar.css
+++ b/src/component/sidebar.css
@@ -14,6 +14,12 @@
 }
 #first-link {
   padding-top: 11rem;
+  /* padding-bottom: 4rem; */
+}
+
+.sidebar-icons {
+  display: flex;
+  align-items: center;
 }
 .sidebar-inner {
   display: flex;
@@ -21,13 +27,23 @@
   align-items: center;
 }
 .sidebar a {
+  /* display: block;
+  color: #bfbfbf;
+  padding: 28px 0px;
+  text-decoration: none;
+  text-align: center;
+  font-size: 18px;
+  width: 100%; */
   display: block;
   color: #bfbfbf;
   padding: 28px 0px;
   text-decoration: none;
   text-align: center;
   font-size: 18px;
-  width: 100%;
+  width: 50;
+  margin: auto;
+  text-align: left;
+  width: 50%;
 }
 
 .sidebar a.active {
@@ -45,7 +61,7 @@
 div.content {
   margin-left: 200px;
   padding: 1px 16px;
-  height: 1000px;
+  /* background: #e5e5e5; */
 }
 .logomark {
   display: flex;
@@ -92,6 +108,9 @@ div.content {
     text-align: center;
     float: none;
     padding: 15px 0;
+  }
+  .sidebar-icons {
+    justify-content: center;
   }
   #first-link {
     padding-top: 4rem;
