--- a/src/layouts/home.css
+++ b/src/layouts/home.css
@@ -6,7 +6,7 @@ header {
   background: #fff;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   display: flex;
-  padding: 2rem 6%;
+  padding: 1rem 4%;
   align-items: center;
   justify-content: space-between;
   z-index: 1000;
@@ -15,6 +15,23 @@ header .logos {
   font-size: 2rem;
   color: #273b4a;
   text-decoration: none;
+}
+header .navbar ul {
+  list-style: none;
+}
+header .navbar ul li {
+  position: relative;
+  float: left;
+}
+header .navbar ul li a {
+  font-size: 20px;
+  padding: 20px;
+  color: #333;
+  display: block;
+}
+header .navbar ul li a:hover {
+  /* background: #333; */
+  color: #d6aa1b;
 }
 header .navcheck a {
   font-size: 1.3rem;
@@ -46,10 +63,11 @@ header label {
 #register {
   color: #ffffff;
   box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.15);
-  border-radius: 5px;
-  padding: 1rem;
+  padding: 0.9rem 0.8rem;
   background: #d6aa1b;
   border-radius: 3.5px 10px 10px 10px;
+  font-size: 20px;
+  margin-top: 0.2rem;
   /* font-family: Poppins; */
 }
 #free {
@@ -64,6 +82,27 @@ header label {
   text-align: center;
   cursor: pointer;
 }
+/* #menu-bar {
+  display: none;
+} */
+.navbar-dropdown {
+  position: absolute;
+  left: 0;
+  width: 132px;
+  background: #fff;
+  /* display: none; */
+  /* display: none;
+    z-index: 1;
+    background: #fff;
+    box-shadow: 0 0 35px 0 rgba(0,0,0,0.25); */
+}
+.navbar-none {
+  display: none;
+}
+.dropdown-list {
+  width: 100%;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
 .socially {
   display: flex;
   justify-content: space-between;
@@ -73,6 +112,12 @@ header label {
   color: #d6aa1b;
   cursor: pointer;
 }
+/* @media (max-width: 768px) {
+  header {
+    padding: 20px;
+  }
+} */
+
 @media (max-width: 768px) {
   .checkbtn {
     display: block;
@@ -80,6 +125,30 @@ header label {
   header label {
     visibility: visible;
     opacity: 1;
+  }
+  header .navbar {
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    transition: all 0.5s;
+    padding: 1rem 2rem;
+    background: #fff;
+    border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+    transform-origin: top;
+    transform: scaleY(0);
+    opacity: 0;
+    /* display:none; */
+  }
+  header .navbar ul li {
+    width: 100%;
+  }
+  header .navbar ul li ul {
+    position: relative;
+    width: 100%;
   }
   header .navcheck {
     position: absolute;
@@ -103,6 +172,19 @@ header label {
     font-size: 1.4rem;
   }
   header input:checked ~ .navcheck {
+    transform: scaleY(1);
+    opacity: 1;
+    /* left: 0; */
+  }
+  header input:checked ~ .label::before {
+    content: "\f00d";
+  }
+  header .navbar a {
+    display: block;
+    margin: 1.5rem 0;
+    font-size: 1.4rem;
+  }
+  header input:checked ~ .navbar {
     transform: scaleY(1);
     opacity: 1;
     /* left: 0; */
@@ -293,9 +375,10 @@ header label {
 
 .downloads {
   display: flex;
-  width: 50%;
+  width: 60%;
   margin-top: 1.8rem;
   cursor: pointer;
+  justify-content: space-between;
 }
 .section-2 {
   display: flex;
@@ -503,6 +586,9 @@ header label {
   display: flex;
   align-items: center;
   margin-top: 1rem;
+}
+.mono {
+  margin-top: 0;
 }
 .create-web {
   width: 28%;
@@ -741,7 +827,6 @@ footer {
 
 .break {
   padding-top: 1rem;
-  color: red;
 }
 .shop-now {
   width: 18% !important;
@@ -1446,6 +1531,16 @@ table th {
   display: flex;
   justify-content: space-between;
 }
+.section-6 {
+  background: #d6aa1b;
+  border-radius: 20px 50px 50px 50px;
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 13rem;
+  flex-direction: column;
+}
 
 .svg-holder {
   width: 88%;
@@ -1573,6 +1668,10 @@ table th {
     margin-bottom: 1.2rem;
     margin-top: 1.2rem;
   }
+  .banner {
+    width: 100%;
+    margin-top: 0;
+  }
   .inner-bckground {
     display: flex;
     flex-direction: column;
@@ -1603,15 +1702,29 @@ table th {
   }
   .downloads {
     flex-direction: column;
-    width: 100%;
-    margin-top: 2.3rem;
+    justify-content: center;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+  }
+  .goog-img {
+    display: flex;
+    width: 60%;
+    margin: 0 auto;
     justify-content: center;
   }
-  .downloads img {
-    padding: 1rem 0 2rem 2rem;
-    width: 90%;
+  .goog-imgs {
+    display: flex;
+    width: 60%;
+    margin: 0 auto;
     justify-content: center;
-    /* margin: 0 auto; */
+    margin-top: 1.3rem;
+  }
+
+  .downloads img {
+    justify-content: center;
+    text-align: center;
   }
 
   .downloads-text {
@@ -1633,26 +1746,26 @@ table th {
     padding-top: 3rem;
     margin-left: 0;
   }
-  .paylink-div{
+  .paylink-div {
     width: 92%;
     margin: 0 auto;
   }
-  .unique-div{
+  .unique-div {
     width: 94%;
     margin: 0 auto;
     padding-left: 0;
     margin-right: 0;
   }
-  .hanger{
+  .hanger {
     width: 95%;
     margin: 0 auto;
     padding-left: 0;
   }
-  .section-3{
+  .section-3 {
     flex-direction: column;
     margin-top: 4rem;
   }
-  .section-2{
+  .section-2 {
     flex-direction: column;
     height: 100%;
   }
@@ -1662,53 +1775,60 @@ table th {
     width: 95%;
     margin: 0 auto;
   }
-  .business-pic{
-      width: 100%;
+  .business-pic {
+    width: 100%;
+  }
+  .business {
+    width: 80%;
+    margin: 0 auto;
+    padding-left: 0;
+  }
+  .navbar-dropdown {
+    position: static;
   }
   .flutter {
     display: flex;
     justify-content: center;
     margin-top: 3rem;
   }
-  .abt-fin{
-      padding-bottom: 2rem;
+  .abt-fin {
+    padding-bottom: 2rem;
   }
-  .banner-holder{
-      width: 90%;
-      margin: 0 auto;
+  .banner-holder {
+    width: 90%;
+    margin: 0 auto;
   }
-  .locate-top{
-      flex-direction: column;
-
+  .locate-top {
+    flex-direction: column;
   }
-  .locate-bottom{
-      margin-top: 0;
-      flex-direction: column;
+  .locate-bottom {
+    margin-top: 0;
+    flex-direction: column;
   }
-  .locator{
-      width:100%;
-      margin-bottom: 1rem;
+  .locator {
+    width: 100%;
+    margin-bottom: 1rem;
   }
-  .sell-holder{
-      margin: 0 auto;
+  .sell-holder {
+    margin: 0 auto;
   }
-  .sell-more{
-      font-size: 35px;
+  .sell-more {
+    font-size: 35px;
   }
-  .clock{
-      width: 100%;
+  .clock {
+    width: 100%;
   }
-  .produps{
-      width: 100%;
-      margin-top: 0;
+  .produps {
+    width: 100%;
+    margin-top: 0;
   }
-  .create-web{
+  .create-web {
     width: 90%;
     margin: 0 auto;
     margin-top: 1rem;
     margin-bottom: 1.5rem;
   }
-  .sales{
+  .sales {
     padding: 0.7rem 0.3rem;
   }
   .paystack {
@@ -1764,14 +1884,13 @@ table th {
     margin-top: 11rem;
     flex-direction: column;
     height: 100%;
-   
-}
-.section-5-hanger {
+  }
+  .section-5-hanger {
     margin-top: 85px;
     width: 90%;
     margin: 0 auto;
     position: static;
-}
+  }
 
   .digital-content h1 {
     padding-top: 2rem;
