--- a/src/layouts/home.css
+++ b/src/layouts/home.css
@@ -109,7 +109,7 @@ header label {
   width: 90%;
 }
 .checkbtn {
-  color: #d6aa1b;
+  color: #273B4A;
   cursor: pointer;
 }
 /* @media (max-width: 768px) {
@@ -611,6 +611,7 @@ header label {
   padding-top: 4rem;
   padding-bottom: 2rem;
   font-family: "DM Sans", sans-serif;
+  background: #fff;
 }
 .company {
   font-style: normal;
