--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -248,7 +248,7 @@ header label {
 }
 .banner-1 {
   width: 50%;
-  padding-left: 4rem;
+  /* padding-left: 4rem; */
   /* padding-top: 5rem;
   margin-bottom: 3rem; */
 }
