--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -234,24 +234,24 @@ header label {
   margin-right: 1.2rem;
   color: #f4bf00;
 }
-.banner {
+/* .banner {
   display: flex;
   margin-top: 14rem !important;
   width: 100%;
   margin: 0 auto;
   flex-direction: column; 
-}
+} */
 .inner-bckground {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
-.banner-1 {
+/* .banner-1 {
   width: 50%;
   /* padding-left: 4rem; */
   /* padding-top: 5rem;
-  margin-bottom: 3rem; */
-}
+  margin-bottom: 3rem; 
+} */
 .bold-desc {
   /* font-family: 'Montserrat'; */
   font-weight: 700;
@@ -270,10 +270,10 @@ header label {
   line-height: 29px;
   color: #8c8c8c;
 }
-.banner-2 {
-  /* width: 45%; */
+/* .banner-2 {
+  /* width: 45%; 
   padding-right: 4rem;
-}
+} */
 .easy-banking {
   font-family: Poppins;
   font-style: normal;
@@ -475,9 +475,9 @@ header label {
   line-height: 65px;
   color: #273b4a;
 }
-.customers {
+/* .customers {
   padding: 3rem;
-}
+} */
 .customers div form {
   display: flex;
   max-width: 70rem;
@@ -510,14 +510,14 @@ header label {
   color: #fff;
   cursor: pointer;
 }
-.love {
-  /* font-family: 'Duplicate Sans'; */
+/* .love {
+  /* font-family: 'Duplicate Sans';
   font-style: normal;
   font-weight: 600;
   font-size: 50px;
   line-height: 54px;
   color: #ffffff;
-}
+} */
 .case-div {
   padding: 1rem 2rem;
   /* width: 50%; */
@@ -649,11 +649,11 @@ footer {
   line-height: 65px;
   color: #ffffff;
 }
-.section-4 {
+/* .section-4 {
   width: 95%;
   margin: 0 auto;
   margin-top: 9rem;
-}
+} */
 .rec {
   display: flex;
   justify-content: center;
@@ -1669,31 +1669,31 @@ table th {
     margin-bottom: 1.2rem;
     margin-top: 1.2rem;
   }
-  .banner {
+  /* .banner {
     width: 100%;
     margin-top: 0;
-  }
+  } */
   .inner-bckground {
     display: flex;
     flex-direction: column;
     width: 100%;
     padding: 0;
   }
-  .banner-1 {
+  /* .banner-1 {
     flex-direction: column;
     width: 100%;
     padding: 0;
-  }
+  } */
   /* .banner-1 h1 {
     font-size: 52px;
   } */
-  .banner-2 {
+  /* .banner-2 {
     width: 100%;
-  }
-  .banner-2 img {
+  } */
+  /* .banner-2 img {
     width: 100%;
     height: auto;
-  }
+  } */
   .save {
     margin-bottom: 3rem;
   }
