--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -390,12 +390,12 @@ header label {
   height: 750px;
   align-items: stretch;
 }
-.section-3 {
+/* .section-3 {
   display: flex;
   justify-content: space-between;
   margin-top: 12rem;
   width: 100%;
-}
+} */
 .section-6 {
   background: #d6aa1b;
   border-radius: 20px 50px 50px 50px;
@@ -440,33 +440,7 @@ header label {
 }
 
 
-/* .customers {
-  padding: 3rem;
-} */
-/* .customers div form {
-  display: flex;
-  max-width: 70rem;
-  border: 0.2rem solid #fff;
-  padding: 0.5rem;
-  background: #ffffff;
-  border-radius: 2.5px 10px 10px 10px;
-  height: 3.5rem;
-  margin-top: 2rem;
-  margin-left: 0;
-  margin-right: 0;
-} */
-/* .customers div form input[type="email"] {
-  padding: 0 2rem;
-  font-size: 1rem;
-  background: none;
-  width: 100%;
-  
-  text-transform: none;
-  border: none; 
-} */
-/* .customers div form input[type="email"]::placeholder {
-  text-transform: capitalize;
-} */
+
 .customers div form input[type="submit"] {
   background: #d6aa1b;
   border-radius: 2.5px 10px 10px 10px;
@@ -475,27 +449,12 @@ header label {
   color: #fff;
   cursor: pointer;
 }
-/* .love {
-  /* font-family: 'Duplicate Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 50px;
-  line-height: 54px;
-  color: #ffffff;
-} */
+
 .case-div {
   padding: 1rem 2rem;
   /* width: 50%; */
 }
-/* .updates {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 19px;
-  line-height: 26px;
-  color: #f7e8b5;
-  padding-top: 2rem;
-} */
+
 .sellers {
   font-style: normal;
   font-weight: 700;
@@ -513,11 +472,11 @@ header label {
   height: 620px;
   position: relative;
 }
-.section-5-hanger {
+/* .section-5-hanger {
   position: absolute;
   margin-top: 85px;
   margin-left: 55px;
-}
+} */
 .sell-holder {
   width: 85%;
 }
@@ -653,7 +612,7 @@ footer {
   margin-right: 3rem;
   gap: 1rem;
 }
-.locator {
+/* .locator {
   border: 5px solid #e0e0e0;
   border-radius: 10px 25px 25px 25px;
   width: 22%;
@@ -662,7 +621,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
+} */
 .locator-btn {
   display: flex;
   justify-content: center;
@@ -690,27 +649,14 @@ footer {
   color: #273b4a;
   padding-left: 1.2rem;
 }
-.business {
+/* .business {
   padding-left: 4rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  /* justify-content: space-between; */
-}
-.business-div {
-  background: #ffffff;
-  border-radius: 10px 25px 25px 25px;
-  width: 90%;
-  display: flex;
-  align-items: center;
-  padding: 1rem 1.5rem;
-  margin-top: 0.5rem;
-}
-.business-cover {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
+  /* justify-content: space-between; 
+} */
+
 .woman {
   width: 100%;
   height: 750px;
@@ -850,12 +796,12 @@ footer {
   display: flex;
   margin-top: 3rem;
 }
-.unique-div {
+/* .unique-div {
   width: 50%;
   padding-top: 2rem;
   padding-left: 4.4rem;
   margin-right: 3.8rem;
-}
+} */
 .unique {
   font-style: normal;
   font-weight: 600;
@@ -1695,21 +1641,21 @@ table th {
     width: 92%;
     margin: 0 auto;
   }
-  .unique-div {
+  /* .unique-div {
     width: 94%;
     margin: 0 auto;
     padding-left: 0;
     margin-right: 0;
-  }
+  } */
   .hanger {
     width: 95%;
     margin: 0 auto;
     padding-left: 0;
   }
-  .section-3 {
+  /* .section-3 {
     flex-direction: column;
     margin-top: 4rem;
-  }
+  } */
   .section-2 {
     flex-direction: column;
     height: 100%;
@@ -1723,11 +1669,7 @@ table th {
   .business-pic {
     width: 100%;
   }
-  .business {
-    width: 80%;
-    margin: 0 auto;
-    padding-left: 0;
-  }
+  
   /* .navbar-dropdown {
     position: static;
   } */
@@ -1829,12 +1771,12 @@ table th {
     flex-direction: column;
     height: 100%;
   }
-  .section-5-hanger {
+  /* .section-5-hanger {
     margin-top: 85px;
     width: 90%;
     margin: 0 auto;
     position: static;
-  }
+  } */
 
   .digital-content h1 {
     padding-top: 2rem;
