--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -234,24 +234,24 @@ header label {
   margin-right: 1.2rem;
   color: #f4bf00;
 }
-.banner {
+/* .banner {
   display: flex;
   margin-top: 14rem !important;
   width: 100%;
   margin: 0 auto;
   flex-direction: column; 
-}
+} */
 .inner-bckground {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
-.banner-1 {
+/* .banner-1 {
   width: 50%;
   /* padding-left: 4rem; */
   /* padding-top: 5rem;
-  margin-bottom: 3rem; */
-}
+  margin-bottom: 3rem; 
+} */
 .bold-desc {
   /* font-family: 'Montserrat'; */
   font-weight: 700;
@@ -270,10 +270,10 @@ header label {
   line-height: 29px;
   color: #8c8c8c;
 }
-.banner-2 {
-  /* width: 45%; */
+/* .banner-2 {
+  /* width: 45%; 
   padding-right: 4rem;
-}
+} */
 .easy-banking {
   font-family: Poppins;
   font-style: normal;
@@ -390,12 +390,12 @@ header label {
   height: 750px;
   align-items: stretch;
 }
-.section-3 {
+/* .section-3 {
   display: flex;
   justify-content: space-between;
   margin-top: 12rem;
   width: 100%;
-}
+} */
 .section-6 {
   background: #d6aa1b;
   border-radius: 20px 50px 50px 50px;
@@ -418,29 +418,8 @@ header label {
   line-height: 65px;
   color: #273b4a;
 }
-.card-sec {
-  width: 90%;
-  margin: 0 auto;
-  margin-top: 8rem;
-  display: flex;
-  justify-content: space-between;
-}
-.atm-right {
-  width: 55%;
-}
-.list {
-  padding-left: 1rem;
-  padding-top: 1.3rem;
-}
-.easily {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 23px;
-  color: #8c8c8c;
-  padding-top: 0.3rem;
-}
+
+
 .ease {
   font-family: "DM Sans";
   font-style: normal;
@@ -459,49 +438,9 @@ header label {
   margin-top: 3rem;
   text-align: justify;
 }
-.debit {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 33px;
-  color: #d6aa1b;
-  padding-top: 1.3rem;
-  font-family: "DM Sans";
-}
-.digits {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 50px;
-  line-height: 65px;
-  color: #273b4a;
-}
-.customers {
-  padding: 3rem;
-}
-.customers div form {
-  display: flex;
-  max-width: 70rem;
-  border: 0.2rem solid #fff;
-  padding: 0.5rem;
-  background: #ffffff;
-  border-radius: 2.5px 10px 10px 10px;
-  height: 3.5rem;
-  margin-top: 2rem;
-  margin-left: 0;
-  margin-right: 0;
-}
-.customers div form input[type="email"] {
-  padding: 0 2rem;
-  font-size: 1rem;
-  background: none;
-  width: 100%;
-  /* color: #fff; */
-  text-transform: none;
-  /* border: none; */
-}
-.customers div form input[type="email"]::placeholder {
-  text-transform: capitalize;
-}
+
+
+
 .customers div form input[type="submit"] {
   background: #d6aa1b;
   border-radius: 2.5px 10px 10px 10px;
@@ -510,27 +449,12 @@ header label {
   color: #fff;
   cursor: pointer;
 }
-.love {
-  /* font-family: 'Duplicate Sans'; */
-  font-style: normal;
-  font-weight: 600;
-  font-size: 50px;
-  line-height: 54px;
-  color: #ffffff;
-}
+
 .case-div {
   padding: 1rem 2rem;
   /* width: 50%; */
 }
-.updates {
-  font-family: "DM Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 19px;
-  line-height: 26px;
-  color: #f7e8b5;
-  padding-top: 2rem;
-}
+
 .sellers {
   font-style: normal;
   font-weight: 700;
@@ -541,7 +465,6 @@ header label {
 .section-5 {
   display: flex;
   justify-content: space-between;
-  width: 90%;
   background: #273b4a;
   border-radius: 20px 50px 50px 50px;
   margin: 0 auto;
@@ -549,11 +472,11 @@ header label {
   height: 620px;
   position: relative;
 }
-.section-5-hanger {
+/* .section-5-hanger {
   position: absolute;
   margin-top: 85px;
   margin-left: 55px;
-}
+} */
 .sell-holder {
   width: 85%;
 }
@@ -649,11 +572,11 @@ footer {
   line-height: 65px;
   color: #ffffff;
 }
-.section-4 {
+/* .section-4 {
   width: 95%;
   margin: 0 auto;
   margin-top: 9rem;
-}
+} */
 .rec {
   display: flex;
   justify-content: center;
@@ -689,7 +612,7 @@ footer {
   margin-right: 3rem;
   gap: 1rem;
 }
-.locator {
+/* .locator {
   border: 5px solid #e0e0e0;
   border-radius: 10px 25px 25px 25px;
   width: 22%;
@@ -698,11 +621,12 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-}
+} */
 .locator-btn {
   display: flex;
   justify-content: center;
   margin-top: 5rem;
+  
 }
 .locate-top {
   display: flex;
@@ -726,27 +650,14 @@ footer {
   color: #273b4a;
   padding-left: 1.2rem;
 }
-.business {
+/* .business {
   padding-left: 4rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  /* justify-content: space-between; */
-}
-.business-div {
-  background: #ffffff;
-  border-radius: 10px 25px 25px 25px;
-  width: 90%;
-  display: flex;
-  align-items: center;
-  padding: 1rem 1.5rem;
-  margin-top: 0.5rem;
-}
-.business-cover {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
+  /* justify-content: space-between; 
+} */
+
 .woman {
   width: 100%;
   height: 750px;
@@ -763,11 +674,7 @@ footer {
   /* padding-top: 3.5rem;
   padding-bottom: 2.2rem; */
 }
-#saleDiv {
-  width: 35% !important;
-  margin-bottom: 1.2rem;
-  margin-top: 0.9rem;
-}
+
 /* .terms {
   width: 90%;
   margin: 0 auto;
@@ -829,12 +736,7 @@ footer {
 .break {
   padding-top: 1rem;
 }
-.shop-now {
-  width: 18% !important;
-  margin-bottom: 1.2rem;
-  margin-top: 1.5rem;
-  cursor: pointer;
-}
+
 .sales {
   font-style: normal;
   font-weight: 500;
@@ -895,12 +797,12 @@ footer {
   display: flex;
   margin-top: 3rem;
 }
-.unique-div {
+/* .unique-div {
   width: 50%;
   padding-top: 2rem;
   padding-left: 4.4rem;
   margin-right: 3.8rem;
-}
+} */
 .unique {
   font-style: normal;
   font-weight: 600;
@@ -1015,7 +917,7 @@ footer {
 
   color: #8c8c8c;
 }
-table {
+/* table {
   border: 1px solid #ccc;
   border-collapse: collapse;
   margin: 0;
@@ -1024,7 +926,7 @@ table {
   table-layout: fixed;
   margin-top: 6rem;
   margin-bottom: 17rem;
-}
+} */
 
 table caption {
   font-size: 1.5em;
@@ -1655,45 +1557,34 @@ table th {
     color: #273b4a;
     padding-top: 5rem;
   }
-  .shop-now {
-    width: 100% !important;
-    margin-bottom: 1.2rem;
-    margin-top: 1.5rem;
-    cursor: pointer;
-  }
-  .atm-right {
-    width: 100%;
-  }
-  #saleDiv {
-    width: 100% !important;
-    margin-bottom: 1.2rem;
-    margin-top: 1.2rem;
-  }
-  .banner {
+  
+ 
+  
+  /* .banner {
     width: 100%;
     margin-top: 0;
-  }
+  } */
   .inner-bckground {
     display: flex;
     flex-direction: column;
     width: 100%;
     padding: 0;
   }
-  .banner-1 {
+  /* .banner-1 {
     flex-direction: column;
     width: 100%;
     padding: 0;
-  }
+  } */
   /* .banner-1 h1 {
     font-size: 52px;
   } */
-  .banner-2 {
+  /* .banner-2 {
     width: 100%;
-  }
-  .banner-2 img {
+  } */
+  /* .banner-2 img {
     width: 100%;
     height: auto;
-  }
+  } */
   .save {
     margin-bottom: 3rem;
   }
@@ -1751,21 +1642,21 @@ table th {
     width: 92%;
     margin: 0 auto;
   }
-  .unique-div {
+  /* .unique-div {
     width: 94%;
     margin: 0 auto;
     padding-left: 0;
     margin-right: 0;
-  }
+  } */
   .hanger {
     width: 95%;
     margin: 0 auto;
     padding-left: 0;
   }
-  .section-3 {
+  /* .section-3 {
     flex-direction: column;
     margin-top: 4rem;
-  }
+  } */
   .section-2 {
     flex-direction: column;
     height: 100%;
@@ -1779,11 +1670,7 @@ table th {
   .business-pic {
     width: 100%;
   }
-  .business {
-    width: 80%;
-    margin: 0 auto;
-    padding-left: 0;
-  }
+  
   /* .navbar-dropdown {
     position: static;
   } */
@@ -1878,7 +1765,6 @@ table th {
   .section-5 {
     display: flex;
     justify-content: space-between;
-    width: 90%;
     background: #273b4a;
     border-radius: 20px 50px 50px 50px;
     margin: 0 auto;
@@ -1886,12 +1772,12 @@ table th {
     flex-direction: column;
     height: 100%;
   }
-  .section-5-hanger {
+  /* .section-5-hanger {
     margin-top: 85px;
     width: 90%;
     margin: 0 auto;
     position: static;
-  }
+  } */
 
   .digital-content h1 {
     padding-top: 2rem;
