--- a/src/components/auth.css
+++ b/src/components/auth.css
@@ -7,15 +7,7 @@
   align-items: center;
 }
 
-form {
-  width: 50%;
-  margin: 0 auto;
-  /* height: 90%; */
-  background: #ffffff;
-  border: 0.5px solid #d9d9d9;
-  box-sizing: border-box;
-  border-radius: 0px 21px 21px 21px;
-}
+
 input[type="text"] {
   width: 100%;
   padding: 25px 20px;
@@ -35,7 +27,7 @@ input[type="text"]:focus {
 }
 
 input::placeholder {
-  color: red;
+  
 }
 input[type="password"] {
   width: 100%;
@@ -122,30 +114,30 @@ span.psw {
 .input-ht {
   height: 65px !important;
 }
-.acct-cover {
+/* .acct-cover {
   background: #fafafa;
   background-size: cover;
   height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-.acct-div {
+} */
+/* .acct-div {
   width: 50%;
   margin: 0 auto;
   background: #ffffff;
   border: 0.5px solid #d9d9d9;
   box-sizing: border-box;
   border-radius: 0px 21px 21px 21px;
-}
-.acct-types {
+} */
+/* .acct-types {
   display: flex;
   width: 80%;
   justify-content: center;
   margin-top: 2.5rem;
   margin: 3rem auto;
-}
-.pers-acct {
+} */
+/* .pers-acct {
   background: #ffffff;
   border: 1px solid #d9d9d9;
   box-sizing: border-box;
@@ -158,12 +150,12 @@ span.psw {
   box-sizing: border-box;
   border-radius: 0px 11px 11px 11px;
   padding: 0.8rem 3rem 1.5rem 1rem;
-}
+} */
 
 @media screen and (max-width: 768px) {
-  form {
+  /* form {
     width: 90%;
-  }
+  } */
   .acct-div {
     width: 90%;
   }
