--- a/src/components/auth.css
+++ b/src/components/auth.css
@@ -8,38 +8,36 @@
 }
 
 
-input[type="text"] {
+/* input[type="text"] {
   width: 100%;
   padding: 25px 20px;
-  /* margin: 0.6rem 0 1.8rem 0; */
+  margin: 0.6rem 0 1.8rem 0; 
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
   background: #fafafa;
   border: 0.5px solid #d9d9d9;
   border-radius: 0px 11px 11px 11px;
-  /* position: relative; */
-}
+  position: relative; 
+} */
 
-input[type="text"]:focus {
+/* input[type="text"]:focus {
   outline: none;
   box-shadow: inset 2px 2px 5px 0 rgba(42, 45, 48, 0.12);
-}
+} */
 
-input::placeholder {
-  
-}
-input[type="password"] {
+
+/* input[type="password"] {
   width: 100%;
   padding: 25px 20px;
-  /* margin: 0rem 0 1.1rem 0; */
+  margin: 0rem 0 1.1rem 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
   background: #fafafa;
   border: 0.5px solid #d9d9d9;
   border-radius: 0px 11px 11px 11px;
-}
+} */
 .input-container {
   display: flex;
   width: 100%;
@@ -122,22 +120,22 @@ span.psw {
   flex-direction: row;
   align-items: center;
 } */
-.acct-div {
+/* .acct-div {
   width: 50%;
   margin: 0 auto;
   background: #ffffff;
   border: 0.5px solid #d9d9d9;
   box-sizing: border-box;
   border-radius: 0px 21px 21px 21px;
-}
-.acct-types {
+} */
+/* .acct-types {
   display: flex;
   width: 80%;
   justify-content: center;
   margin-top: 2.5rem;
   margin: 3rem auto;
-}
-.pers-acct {
+} */
+/* .pers-acct {
   background: #ffffff;
   border: 1px solid #d9d9d9;
   box-sizing: border-box;
@@ -150,7 +148,7 @@ span.psw {
   box-sizing: border-box;
   border-radius: 0px 11px 11px 11px;
   padding: 0.8rem 3rem 1.5rem 1rem;
-}
+} */
 
 @media screen and (max-width: 768px) {
   /* form {
