--- a/src/components/auth.css
+++ b/src/components/auth.css
@@ -8,38 +8,36 @@
 }
 
 
-input[type="text"] {
+/* input[type="text"] {
   width: 100%;
   padding: 25px 20px;
-  /* margin: 0.6rem 0 1.8rem 0; */
+  margin: 0.6rem 0 1.8rem 0; 
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
   background: #fafafa;
   border: 0.5px solid #d9d9d9;
   border-radius: 0px 11px 11px 11px;
-  /* position: relative; */
-}
+  position: relative; 
+} */
 
-input[type="text"]:focus {
+/* input[type="text"]:focus {
   outline: none;
   box-shadow: inset 2px 2px 5px 0 rgba(42, 45, 48, 0.12);
-}
+} */
 
-input::placeholder {
-  
-}
-input[type="password"] {
+
+/* input[type="password"] {
   width: 100%;
   padding: 25px 20px;
-  /* margin: 0rem 0 1.1rem 0; */
+  margin: 0rem 0 1.1rem 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
   background: #fafafa;
   border: 0.5px solid #d9d9d9;
   border-radius: 0px 11px 11px 11px;
-}
+} */
 .input-container {
   display: flex;
   width: 100%;
