--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,20 @@ code {
     monospace;
 }
 
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 30px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: rgb(32, 32, 32);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: rgb(48, 48, 48);
+}
