--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -117,36 +117,56 @@ div.content {
   }
 }  */
 
-.side-nav {
+/* .dashboard__side-nav{
+background: #FFFFFF;
+  transform: matrix(-1, 0, 0, 1, 0, 0);
+} */
+.space{
+  margin-bottom: 1.2rem;
+}
+
+
+.side-nav{
   position: fixed;
   height: 100%;
   background-color: #FFF;
-  color: #000;
-  width: 260px;
+  color: rgb(29, 29, 29);
+  width: 280px;
   z-index: 5;
-  padding-top: 10px;
+  padding-top: 60px;
+  padding-left: 60px;
   overflow: hidden;
+  border-right: 1px solid #D9D9D9;
+  border-radius: 20px;
+  box-shadow: #adadad;
 
-  /* @media (max-width: 1000px) {
+  @media (max-width: 1000px) {
     transform: translateX(-100%);
     transition: transform 200ms;
-  } */
+  }
+}
+.list{
+  margin-bottom: 12rem;
+}
+
+
+.icons{
+  font-size: 25px;
+  padding-right: 10px;
 }
 
 .active {
-  transform: translateX(0);
+  color: #01001d;
+    /* color: #fff; */
 }
 
-.circle {
-  position: absolute;
-  left: -120%;
-  bottom: -220px;
-}
 
 .logo {
   display: flex;
   justify-content: center;
+  position:absolute;
+  bottom:50px;
 }
  .logo img {
-    height: 30px;
+    height: 25px;
   }
